still unfinished but changed GET gamesession to work with positions and update them successfully
