# api/gamesession-openapi.yaml
@@ -51,6 +51,16 @@ paths:
         schema:
           type: string
           example: "637620d6af622b1c8dbf7f7e"
+      - name: position
+        in: body
+        description: current player position
+        schema:
+            type: array
+            items:
+              - name: lat
+                type: string
+              - name: lng
+                type: string
       responses:
         "200":
           description: OK
@@ -126,20 +136,6 @@ paths:
           description: OK
         "404":
           description: Gamessession doesn't exist/User not in session
-    /gamesession/positions:
-      put:
-        summary: update players current position
-        requestBody:
-      content:
-        application/json:
-           parameters:
-          schema:
-            type: array
-            items:
-              - name: lat
-                type: string
-              - name: lng
-                type: string
               
 components:
   schemas:
